--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@aiou/bin-template",
-  "version": "1.1.1",
+  "name": "gh-profile",
+  "version": "0.0.0",
   "description": "templates for command project",
-  "main": ".lib/bin-template.cjs.js",
-  "module": ".lib/bin-template.esm.js",
+  "main": ".lib/ghp.cjs.js",
+  "module": ".lib/ghp.esm.js",
   "bin": {
-    "bin-template": "lib/bin-template",
-    "bin-template-create": "lib/bin-template-create",
-    "bin-template-list": "lib/bin-template-list"
+    "ghp": "lib/ghp",
+    "ghp-create": "lib/ghp-create",
+    "ghp-list": "lib/ghp-list"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild": "tsc",
+    "prebuild": "rimraf ./lib && rimraf ./.lib && tsc",
     "build": "npm run prebuild && node scripts/build.js",
     "pretest": "npm run build",
     "update": "npm update && npm update --save-dev",
@@ -24,15 +24,17 @@
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "download": "^7.1.0",
+    "fs-extra": "^8.1.0",
+    "git-user-name": "^2.0.0",
     "inquirer": "^6.5.0",
     "ora": "^3.4.0",
     "rimraf": "^2.6.3",
-    "tildify": "^2.0.0",
-    "fs-extra": "^8.1.0"
+    "tildify": "^2.0.0"
   },
   "devDependencies": {
     "@types/download": "^6.2.4",
     "@types/fs-extra": "^8.0.0",
+    "@types/git-user-name": "^2.0.0",
     "@types/inquirer": "^6.5.0",
     "@types/node": "^12.6.8",
     "@types/rimraf": "^2.0.2",
