--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gh-profile",
+  "name": "gh-open",
   "version": "0.0.0",
   "description": "templates for command project",
   "main": ".lib/ghp.cjs.js",
@@ -18,24 +18,19 @@
     "check": "npm outdated && npm outdated --save-dev",
     "prepublishOnly": "npm run build && np --no-cleanup --yolo --no-publish --any-branch"
   },
-  "author": "JW",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JiangWeixian/gh-open"
+  },
   "license": "MIT",
   "dependencies": {
     "chalk": "2.4.2",
     "commander": "2.20.0",
-    "download": "7.1.0",
-    "fs-extra": "8.1.0",
-    "git-user-name": "2.0.0",
-    "inquirer": "6.5.0",
-    "ora": "3.4.0",
-    "rimraf": "2.6.3",
-    "tildify": "2.0.0"
+    "git-user-name": "2.0.0"
   },
   "devDependencies": {
-    "@types/download": "6.2.4",
-    "@types/fs-extra": "8.0.0",
+    "rimraf": "2.6.3",
     "@types/git-user-name": "2.0.0",
-    "@types/inquirer": "6.5.0",
     "@types/node": "12.6.8",
     "@types/rimraf": "2.0.2",
     "builtin-modules": "3.1.0",
@@ -47,5 +42,8 @@
     "tslint-eslint-rules": "5.4.0",
     "tslint-plugin-prettier": "2.0.1",
     "typescript": "3.5.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
