--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     "git-user-name": "2.0.0"
   },
   "devDependencies": {
-    "rimraf": "2.6.3",
     "@types/git-user-name": "2.0.0",
     "@types/node": "12.6.8",
     "@types/rimraf": "2.0.2",
     "builtin-modules": "3.1.0",
+    "fs-extra": "9.0.0",
     "husky": "3.0.2",
     "np": "5.0.3",
     "prettier": "1.17.0",
     "pretty-quick": "1.10.0",
+    "rimraf": "2.6.3",
     "tslint-config-prettier": "1.18.0",
     "tslint-eslint-rules": "5.4.0",
     "tslint-plugin-prettier": "2.0.1",
