--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gh-open",
+  "name": "gh-quick-command",
   "version": "0.0.2",
   "description": "templates for command project",
   "main": ".lib/ghp.cjs.js",
