--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gh-quick-command",
-  "version": "0.0.4",
+  "version": "0.0.5-0",
   "description": "templates for command project",
   "main": ".lib/ghp.cjs.js",
   "module": ".lib/ghp.esm.js",
