--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
   "dependencies": {
     "chalk": "2.4.2",
     "commander": "2.20.0",
+    "git-repo-info": "^2.1.1",
+    "git-repo-name": "^1.0.1",
     "git-user-name": "2.0.0"
   },
   "devDependencies": {
+    "@types/git-repo-name": "^1.0.0",
     "@types/git-user-name": "2.0.0",
     "@types/node": "12.6.8",
     "@types/rimraf": "2.0.2",
