--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "chalk": "2.4.2",
     "commander": "2.20.0",
+    "git-remote-origin-url": "^3.1.0",
     "git-repo-info": "^2.1.1",
     "git-repo-name": "^1.0.1",
     "git-user-name": "2.0.0"
