--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gh-quick-command",
-  "version": "0.3.0-2",
+  "version": "0.4.2-0",
   "description": "quick open github page with command",
   "main": ".lib/ghp.cjs.js",
   "module": ".lib/ghp.esm.js",
@@ -35,13 +35,14 @@
   "dependencies": {
     "chalk": "2.4.2",
     "commander": "2.20.0",
-    "git-remote-origin-url": "^3.1.0",
-    "git-repo-info": "^2.1.1",
-    "git-repo-name": "^1.0.1",
-    "git-user-name": "2.0.0"
+    "git-remote-origin-url": "3.1.0",
+    "git-repo-info": "2.1.1",
+    "git-repo-name": "1.0.1",
+    "git-user-name": "2.0.0",
+    "tslib": "2.0.0"
   },
   "devDependencies": {
-    "@types/git-repo-name": "^1.0.0",
+    "@types/git-repo-name": "1.0.0",
     "@types/git-user-name": "2.0.0",
     "@types/node": "12.6.8",
     "@types/rimraf": "2.0.2",
